--- a/OzEditorGUI/OzEditorGUI/OzEditorGUI.csproj
+++ b/OzEditorGUI/OzEditorGUI/OzEditorGUI.csproj
@@ -37,16 +37,17 @@
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
         <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\Programs\2020.3.21f1c1\Editor\Data\Managed\UnityEditor.dll</HintPath>
+          <HintPath>..\Dependencies\UnityEditor.dll</HintPath>
           <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\..\..\Programs\2020.3.21f1c1\Editor\Data\Managed\UnityEngine.dll</HintPath>
+          <HintPath>..\Dependencies\UnityEngine.dll</HintPath>
           <Private>False</Private>
         </Reference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="OzComponent.cs" />
+        <Compile Include="OzEditorObject.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
